src/app.css
/* ... */
.szh-menu .szh-menu__item--hover:not(.menu-field) {
  color: var(--button-text-color);
  background-color: var(--button-bg-color);
}
.szh-menu__divider {
  background-color: var(--divider-color);
}
.szh-menu .szh-menu__item .menu-grow {
  flex-grow: 1;
  text-overflow: ellipsis;
  overflow: hidden;
}
.szh-menu .menu-double-lines {
  white-space: normal !important;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden !important;
}
.szh-menu .menu-double-lines span {
  white-space: normal;
  line-height: inherit;
  font-size: inherit;
}
.szh-menu .menu-horizontal {
  display: grid;
  /* two columns only */
  grid-template-columns: repeat(2, 1fr);
}
.szh-menu .menu-horizontal > .szh-menu__item:not(:only-child):first-child,
.szh-menu .menu-horizontal > *:not(:only-child):first-child .szh-menu__item {
  padding-right: 4px !important;
}
.szh-menu
  .menu-horizontal
  > .szh-menu__item:not(:only-child):not(:first-child):not(:last-child),
.szh-menu
  .menu-horizontal
  > *:not(:only-child):not(:first-child):not(:last-child)
  .szh-menu__item {
  padding-left: 8px !important;
  padding-right: 4px !important;
}
.szh-menu .menu-horizontal > .szh-menu__item:not(:only-child):last-child,
.szh-menu .menu-horizontal > *:not(:only-child):last-child .szh-menu__item {
  padding-left: 8px !important;
}
.szh-menu .szh-menu__item .menu-shortcut {
  opacity: 0.5;
  font-weight: normal;
}
.szh-menu .szh-menu__item form {
  display: flex;
  flex: 1;
  gap: 8px;
  align-items: center;
}
.szh-menu .szh-menu__item form > input[type='text'] {
  flex-grow: 1;
  width: 100%;
}
.szh-menu .szh-menu__item--hover .danger-icon {
  color: var(--red-color);
  opacity: 1;
}
.szh-menu
  .szh-menu__item:not(.szh-menu__item--disabled):not(
    .szh-menu__item--hover
  ).danger {
  color: var(--red-color);
}
.szh-menu
  .szh-menu__item:not(.szh-menu__item--disabled):not(
    .szh-menu__item--hover
  ).danger
  .icon {
  opacity: 1;
}

.szh-menu .menu-wrap {
  display: flex;
  flex-wrap: wrap;
}
.szh-menu .menu-wrap > * {
  flex-grow: 1;
  flex-basis: 50%;
}

/* GLASS MENU */

.glass-menu {
  background-color: var(--bg-blur-color);
  backdrop-filter: blur(8px) saturate(3);
  border: var(--hairline-width) solid var(--bg-color);
  box-shadow: 0 3px 8px -1px var(--drop-shadow-color);
  text-shadow: 0 var(--hairline-width) var(--bg-color), 0 0 8px var(--bg-color);
}
.glass-menu .szh-menu__item--hover {
  background-color: var(--button-bg-blur-color);
  text-shadow: none;
}

/* DONUT METER */

meter.donut {
  appearance: none;
}

meter.donut::-webkit-meter-inner-element,
meter.donut::-webkit-meter-bar,
meter.donut::-webkit-meter-optimum-value,
meter.donut::-webkit-meter-suboptimum-value,
meter.donut::-webkit-meter-even-less-good-value {
  display: none;
}

meter.donut::-moz-meter-bar {
  background: transparent;
}

meter.donut {
  position: relative;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  --fill: calc(var(--percentage) * 1%);
  --color: var(--link-color);
  --middle-circle: radial-gradient(
    circle at 50% 50%,
    var(--bg-faded-color) 10px,
    transparent 10px
  );
  background-image: var(--middle-circle),
    conic-gradient(var(--color) var(--fill), var(--bg-faded-blur-color) 0);
}
meter.donut.warning {
  --color: var(--orange-color);
}
meter.donut.danger {
  --color: var(--red-color);
}
meter.donut.explode {
  background-image: none;
}
meter.donut:is(.warning, .danger, .explode):after {
  content: attr(data-left);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 12px;
  color: var(--text-insignificant-color);
}
meter.donut:is(.danger, .explode):after {
  color: var(--red-color);
}
meter.donut[hidden] {
  display: inline-block;
  visibility: hidden;
}

/* SHINY PILL */

:is(.shiny-pill, :root .toastify.shiny-pill) {
  pointer-events: auto;
  color: var(--button-text-color);
  text-shadow: 0 calc(var(--hairline-width) * -1) var(--drop-shadow-color);
  background-color: var(--button-bg-color);
  background-image: linear-gradient(
    160deg,
    rgba(255, 255, 255, 0.5),
    rgba(0, 0, 0, 0.1)
  );
  box-shadow: 0 3px 8px -1px var(--drop-shadow-color),
    0 10px 36px -4px var(--button-bg-blur-color),
    inset var(--hairline-width) var(--hairline-width) rgba(255, 255, 255, 0.5);
  transition: filter 0.3s;
}
:is(.shiny-pill, :root .toastify.shiny-pill):hover {
  filter: brightness(1.2);
}
:is(.shiny-pill, :root .toastify.shiny-pill):active {
  transition: none;
  filter: brightness(0.9);
}

/* TOAST */

:root .toastify {
  user-select: none;
  padding: 8px 16px;
  border-radius: 999px;
  pointer-events: none;
  color: var(--button-text-color);
  text-shadow: 0 calc(var(--hairline-width) * -1) var(--drop-shadow-color);
  background-color: var(--button-bg-blur-color);
  background-image: none;
  backdrop-filter: blur(16px);
}
.toastify-bottom {
  margin-bottom: env(safe-area-inset-bottom);
}

/* TOAST - ALERT */

:root .toastify.alert {
  z-index: 1001;
  box-shadow: 0 8px 32px var(--text-insignificant-color);
  background-color: var(--bg-color);
  color: var(--text-color);
  cursor: pointer;
  pointer-events: auto;
  padding: 16px 32px;
  font-size: max(calc(16px * 1.1), var(--text-size));
  text-align: center;
  line-height: 1.25;
}
:root .toastify.alert:is(:hover, :active) {
  background-color: var(--bg-faded-color);
}

/* AVATARS STACK */

.avatars-stack {
  display: flex;
  flex-wrap: wrap;
  gap: 4px;
}
/* I'm just feeling bored, so having fun here */
@media (hover: hover) {
  .avatars-stack > * img {
    transition: transform 0.3s ease-in-out;
  }
  .avatars-stack:hover > *:nth-of-type(odd) img {
    transform: rotate(15deg);
  }
  .avatars-stack:hover > *:nth-of-type(even) img {
    transform: rotate(-15deg);
  }
}

.deck-container {
  width: 100%;
  flex-grow: 1;
}
:is(#home-page, #welcome, #columns) ~ .deck-container {
  z-index: 10;
  position: fixed;
  inset: 0;
}
/* ... */

